fix task icon alignment

--- a/styles/main.css
+++ b/styles/main.css
@@ -117,7 +117,7 @@
         font-family: 'PT Sans','Helvetica Neue',Helvetica,Arial,sans-serif;
         font-size: 1.625rem;
         font-style: bold;
-        margin-left: -16px;
+        margin-left: -4px;
     }
 
         .lvm-task-number p:before {
