--- a/styles/website.css
+++ b/styles/website.css
@@ -8,7 +8,7 @@
     color: #6c6d6d;
     font-size: 1.625rem;
     font-style: bold;
-    margin-left: -8px;
+    margin-left: -4px;
 }
 
 .lvm-task-number p:before {
